Finished the prototype validation
